--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,17 @@
-aiohttp==3.7.4.post0
+aiohttp==3.7.3
+anyio==3.3.2
 async-timeout==3.0.1
 attrs==21.2.0
-chardet==4.0.0
+certifi==2021.10.8
+chardet==3.0.4
+charset-normalizer==2.0.6
+h11==0.12.0
+httpcore==0.13.7
+httpx==0.19.0
 idna==3.2
 multidict==5.2.0
 pymongo==3.12.0
+rfc3986==1.5.0
+sniffio==1.2.0
 typing-extensions==3.10.0.2
 yarl==1.7.0
