--- a/app/config.py.sample
+++ b/app/config.py.sample
@@ -1,3 +1,3 @@
 SITES = [] #Array of sites' domains
 WEBHOOK_ENDPOINT = '' #Endpoint of notify
-DATABASE = ""
+DATABASE = "" #user:password@host/Database_name
