--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,11 +7,13 @@ chardet==3.0.4
 charset-normalizer==2.0.6
 h11==0.12.0
 httpcore==0.13.7
-httpx==0.19.0
 idna==3.2
 multidict==5.2.0
-pymongo==3.12.0
+psycopg2==2.9.1
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.2.0
+SQLAlchemy==1.4.25
+SQLAlchemy-Utils==0.37.8
 typing-extensions==3.10.0.2
 yarl==1.7.0
